- initial adjustments: > packaged some java classes for organization. > updated the drawer navigation.

--- a/PetFeeder/app/src/main/res/layout/activity_bluetooth.xml
+++ b/PetFeeder/app/src/main/res/layout/activity_bluetooth.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:gravity="center_horizontal"
     android:background="@drawable/yellow_background"
-    tools:context=".Bluetooth">
+    tools:context=".Bluetooth.Bluetooth">
 
 
 
