--- a/PetFeeder/app/src/main/res/layout/activity_main.xml
+++ b/PetFeeder/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/yellow_background"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".SplashScreen.MainActivity">
 
     <ProgressBar
         android:id="@+id/pb"
