--- a/PetFeeder/app/src/main/res/layout/activity_about.xml
+++ b/PetFeeder/app/src/main/res/layout/activity_about.xml
@@ -5,20 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/yellow_background"
-    tools:context=".About">
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/about_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/orange"
-        android:elevation="5dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:navigationIcon="@drawable/ic_arrow_back"
-        app:title="About"
-        app:titleTextColor="@color/white"/>
+    tools:context=".Components.About">
 
     <ScrollView
         android:id="@+id/scrollView"
@@ -40,8 +27,7 @@
             <ImageView
                 android:id="@+id/imageView3"
                 android:layout_width="151dp"
-                android:layout_height="273dp"
-                android:layout_marginTop="10dp"
+                android:layout_height="170dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -53,18 +39,14 @@
                 android:id="@+id/title2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="-50dp"
-                android:layout_marginBottom="436dp"
                 android:text="@string/about"
                 android:textAlignment="center"
                 android:textColor="#090909"
                 android:textSize="25sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView3"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
             <TextView
                 android:id="@+id/aboutText"
@@ -73,18 +55,17 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/rounded_corner_background"
+                android:justificationMode="inter_word"
                 android:padding="16dp"
                 android:text="@string/about_info"
                 android:textColor="#090909"
                 android:textSize="22sp"
-                android:justificationMode="inter_word"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView3"
+                app:layout_constraintTop_toBottomOf="@id/title2"
                 app:layout_constraintWidth_default="wrap"
-                app:layout_constraintWidth_max="350dp"
-                app:layout_constraintWidth_percent="0.9" />
+                app:layout_constraintWidth_max="350dp" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
