--- a/PetFeeder/app/src/main/res/layout/nav_header.xml
+++ b/PetFeeder/app/src/main/res/layout/nav_header.xml
@@ -1,69 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="250dp"
-    android:orientation="vertical"
-    android:background="@drawable/yellow_background">
+    android:layout_height="200dp"
+    android:background="@drawable/yellow_background"
+    android:layout_centerVertical="true">
 
     <ImageView
         android:id="@+id/launcher"
-        android:layout_width="160dp"
-        android:layout_height="160dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="25dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:contentDescription="@string/navigation_header"
-        android:src="@drawable/tffi_logo" />
+        android:src="@drawable/tffi_logo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.115"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/appName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="51dp"
-        android:layout_marginBottom="141dp"
-        android:layout_toEndOf="@+id/launcher"
+        android:layout_marginTop="28dp"
         android:text="@string/app"
         android:textColor="#FFFFFF"
-        android:textSize="25sp"
-        android:textStyle="bold" />
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.074"
+        app:layout_constraintStart_toEndOf="@+id/launcher"
+        app:layout_constraintTop_toTopOf="@+id/launcher" />
 
     <TextView
         android:id="@+id/subTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/appName"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="7dp"
-        android:layout_marginTop="-145dp"
-        android:layout_marginEnd="90dp"
-        android:layout_marginBottom="79dp"
-        android:layout_toEndOf="@+id/launcher"
-        android:text="Pet Feeder"
+        android:text="@string/app_name"
         android:textColor="#FFFFFF"
-        android:textSize="22sp"
-        android:textStyle="bold" />
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/launcher"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.053"
+        app:layout_constraintStart_toEndOf="@+id/launcher"
+        app:layout_constraintTop_toBottomOf="@+id/appName"
+        app:layout_constraintVertical_bias="0.0" />
 
-    <TextView
-        android:id="@+id/username"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/launcher"
-        android:layout_alignStart="@+id/launcher"
-        android:layout_alignEnd="@+id/launcher"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="39dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="34dp"
-        android:layout_marginBottom="25dp"
-        android:text="@string/username"
-        android:textColor="#FFFFFF"
-        android:textSize="19sp"
-        android:textStyle="bold" />
-
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
