--- a/PetFeeder/app/src/main/res/layout/activity_bluetooth.xml
+++ b/PetFeeder/app/src/main/res/layout/activity_bluetooth.xml
@@ -6,21 +6,23 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center_horizontal"
+    android:padding="16dp"
     android:background="@drawable/yellow_background"
-    tools:context=".Bluetooth.Bluetooth">
+    tools:context=".ScanBluetooth">
 
+        <Button
+            android:id="@+id/scanButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Start Scan" />
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/btn_paired"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="10dp"
-        android:text="On"
-        android:textSize="18dp"/>
-    <ListView
-        android:id="@+id/devicelist"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
 </LinearLayout>
