--- a/PetFeeder/app/src/main/res/values/colors.xml
+++ b/PetFeeder/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="blue_green">#13B2C3</color>
     <color name="orange">#E6A326</color>
     <color name="pink">#D95F69</color>
+    <color name="lightGray">#cccccc</color>
 </resources>
