- basta maraming changes.

--- a/PetFeeder/app/src/main/res/layout/activity_drawer_nav.xml
+++ b/PetFeeder/app/src/main/res/layout/activity_drawer_nav.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/yellow_background"
     android:fitsSystemWindows="true"
-    tools:context=".DrawerNav"
+    tools:context=".Adapters.DrawerNav"
     tools:openDrawer="start">
 
     <include layout="@layout/content_layout"
