--- a/PetFeeder/app/src/main/res/layout/activity_add_pet.xml
+++ b/PetFeeder/app/src/main/res/layout/activity_add_pet.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/yellow_background"
-    tools:context=".AddPet">
+    tools:context=".Pages.AddPet">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/my_toolbar"
