--- a/PetFeeder/app/src/main/res/layout/activity_bluetooth.xml
+++ b/PetFeeder/app/src/main/res/layout/activity_bluetooth.xml
@@ -8,7 +8,7 @@
     android:gravity="center_horizontal"
     android:padding="16dp"
     android:background="@drawable/yellow_background"
-    tools:context=".ScanBluetooth">
+    tools:context=".Pages.ScanBluetooth">
 
         <Button
             android:id="@+id/scanButton"
