--- a/PetFeeder/app/src/main/res/layout/activity_diet.xml
+++ b/PetFeeder/app/src/main/res/layout/activity_diet.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/yellow_background"
-    tools:context=".Diet">
+    tools:context=".Pages.Diet">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/diet_toolbar"
@@ -16,43 +16,46 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:title="Feed"
+        app:title="Diet"
         app:titleTextColor="@color/white" />
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="185dp"
-        android:layout_height="137dp"
-        android:layout_marginTop="27dp"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/diet_toolbar"
-        tools:src="@drawable/tffi_logo" />
+        app:srcCompat="@drawable/tffi_logo" />
 
     <EditText
         android:id="@+id/date_pick"
-        android:layout_width="375dp"
-        android:layout_height="53dp"
-        android:layout_marginTop="48dp"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/box"
         android:clickable="false"
         android:cursorVisible="false"
         android:focusable="false"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:focusableInTouchMode="false"
         android:hint="@string/select_date"
         android:textAlignment="gravity"
+        android:paddingStart="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.444"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
     <EditText
         android:id="@+id/time_pick"
-        android:layout_width="375dp"
-        android:layout_height="53dp"
-        android:layout_marginTop="28dp"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
         android:hint="@string/select_time"
         android:textAlignment="gravity"
+        android:paddingStart="20dp"
         android:clickable="false"
         android:cursorVisible="false"
         android:focusable="false"
@@ -64,10 +67,12 @@
 
     <RadioGroup
         android:id="@+id/first"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:layout_marginStart="25dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/time_pick">
 
@@ -94,29 +99,32 @@
             android:onClick="uploadData"
             android:text="@string/lvl3"
             android:textSize="20sp" />
+
         <RadioButton
             android:id="@+id/lvl_4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="uploadData"
             android:text="@string/lvl4"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:onClick="uploadData"
             app:layout_constraintTop_toBottomOf="@+id/time_pick" />
+
         <RadioButton
             android:id="@+id/lvl_5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="uploadData"
             android:text="@string/lvl5"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
+
         <RadioButton
             android:id="@+id/lvl_6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="uploadData"
             android:text="@string/lvl6"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
     </RadioGroup>
 
 
@@ -124,7 +132,7 @@
         android:id="@+id/upload"
         android:layout_width="109dp"
         android:layout_height="62dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="20dp"
         android:text="@string/upload"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
