--- a/PetFeeder/app/src/main/res/layout/activity_display_pet_details.xml
+++ b/PetFeeder/app/src/main/res/layout/activity_display_pet_details.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/yellow_background"
-    tools:context=".DisplayPetDetails">
+    tools:context=".Pages.DisplayPetDetails">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/pet_toolbar"
