--- a/PetFeeder/app/src/main/res/layout/activity_display_pet_details.xml
+++ b/PetFeeder/app/src/main/res/layout/activity_display_pet_details.xml
@@ -66,6 +66,7 @@
                 </TableRow>
 
                 <TableRow>
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -109,59 +110,6 @@
                         android:textColor="@color/white"
                         android:textSize="18sp" />
                 </TableRow>
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="30dp"
-                        android:padding="5dp"
-                        android:text="@string/sex"
-                        android:textColor="#151515"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/petSexDisplay"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="30dp"
-                        android:layout_weight="1"
-                        android:padding="5dp"
-                        android:text="Pet Breed Here"
-                        android:textColor="@color/white"
-                        android:textSize="18sp" />
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="30dp"
-                        android:padding="5dp"
-                        android:text="@string/birthdate"
-                        android:textColor="#151515"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/petBdateDisplay"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="30dp"
-                        android:layout_weight="1"
-                        android:padding="5dp"
-                        android:text="Pet Birthdate Here"
-                        android:textColor="@color/white"
-                        android:textSize="18sp" />
-                </TableRow>
-
                 <TableRow>
                     <TextView
                         android:layout_width="match_parent"
@@ -180,6 +128,49 @@
                         android:layout_weight="1"
                         android:padding="5dp"
                         android:text="Pet Age Here"
+                        android:textColor="@color/white"
+                        android:textSize="18sp" />
+                </TableRow>
+                <TableRow>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="30dp"
+                        android:padding="5dp"
+                        android:text="@string/sex"
+                        android:textColor="#151515"
+                        android:textSize="18sp"
+                        android:textStyle="bold"/>
+                    <TextView
+                        android:id="@+id/petSexDisplay"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginEnd="30dp"
+                        android:padding="5dp"
+                        android:text="Pet Breed Here"
+                        android:textColor="@color/white"
+                        android:textSize="18sp" />
+                </TableRow>
+                <TableRow>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="30dp"
+                        android:padding="5dp"
+                        android:text="@string/birthdate"
+                        android:textColor="#151515"
+                        android:textSize="18sp"
+                        android:textStyle="bold"/>
+
+                    <TextView
+                        android:id="@+id/petBdateDisplay"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginEnd="30dp"
+                        android:padding="5dp"
+                        android:text="Pet Birthdate Here"
                         android:textColor="@color/white"
                         android:textSize="18sp" />
                 </TableRow>
@@ -250,48 +241,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="30dp"
                         android:padding="5dp"
-                        android:text="@string/treats"
-                        android:textColor="#151515"
-                        android:textSize="18sp"
-                        android:textStyle="bold"/>
-                    <TextView
-                        android:id="@+id/petTreatsDisplay"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:layout_marginEnd="30dp"
-                        android:padding="5dp"
-                        android:text="Pet Treats Here"
-                        android:textColor="@color/white"
-                        android:textSize="18sp" />
-                </TableRow>
-                <TableRow>
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="30dp"
-                        android:padding="5dp"
-                        android:text="@string/restrictions"
-                        android:textColor="#151515"
-                        android:textSize="18sp"
-                        android:textStyle="bold"/>
-                    <TextView
-                        android:id="@+id/petRestrictionsDisplay"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:layout_marginEnd="30dp"
-                        android:padding="5dp"
-                        android:text="Pet Restrictions Here"
-                        android:textColor="@color/white"
-                        android:textSize="18sp" />
-                </TableRow>
-                <TableRow>
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="30dp"
-                        android:padding="5dp"
                         android:text="@string/medications"
                         android:textColor="#151515"
                         android:textSize="18sp"
@@ -326,6 +275,28 @@
                         android:layout_marginEnd="30dp"
                         android:padding="5dp"
                         android:text="Vet Name Here"
+                        android:textColor="@color/white"
+                        android:textSize="18sp" />
+                </TableRow>
+                <TableRow>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="30dp"
+                        android:padding="5dp"
+                        android:text="@string/vet_contact"
+                        android:textColor="#151515"
+                        android:textSize="18sp"
+                        android:textStyle="bold"/>
+
+                    <TextView
+                        android:id="@+id/vetContactDisplay"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginEnd="30dp"
+                        android:padding="5dp"
+                        android:text="Vet Contact Here"
                         android:textColor="@color/white"
                         android:textSize="18sp" />
                 </TableRow>
